@@ -33,8 +33,9 @@ oathtool_cmd.h oathtool_cmd.c: oathtool.ggo Makefile.am
 	$(AM_V_GEN)gengetopt --unamed-opts="KEY [OTP]" \
 		--no-handle-version --no-handle-help \
 		--input $< --file-name oathtool_cmd && \
-	perl -pi -e 's/HAVE_LONG_LONG/HAVE_LONG_LONG_INT/' oathtool_cmd.h oathtool_cmd.c && \
-	perl -pi -e 's/\(long long int\) strtol /\(long long int\) strtoll /' oathtool_cmd.c
+	perl -pi -e 's/HAVE_LONG_LONG/HAVE_UNSIGNED_LONG_LONG/g' oathtool_cmd.h oathtool_cmd.c && \
+	perl -pi -e 's/long long int/unsigned long long int/g' oathtool_cmd.h oathtool_cmd.c && \
+	perl -pi -e 's/int\) strtoll /int\) strtoull /' oathtool_cmd.c
 
 dist_man_MANS = oathtool.1
 MAINTAINERCLEANFILES = $(dist_man_MANS)
